@@ -18,7 +18,7 @@ dnl Init automake
 dnl ---
 dnl -- >                   !!!!!!!!!
 dnl remember to update eca-version.h
-AM_INIT_AUTOMAKE(ecasound, 2.1dev1)
+AM_INIT_AUTOMAKE(ecasound, 2.1dev2)
 dnl <--                    !!!!!!!!!
 AM_CONFIG_HEADER(config.h)
 
